--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp"
-dynamic = ["version"]
+version = "1.12.5"
 description = "Model Context Protocol SDK"
 readme = "README.md"
 requires-python = ">=3.10"
